[gd_scene load_steps=5 format=3 uid="uid://iftu5au0m845"]

[ext_resource type="Script" uid="uid://c58cbxq0qlql6" path="res://scenes/enemy/enemy.gd" id="1_jf5t1"]
[ext_resource type="Texture2D" uid="uid://b0d6xe0sreis5" path="res://Topdown Assets/Sprites/Shadow.png" id="2_23iyx"]
[ext_resource type="PackedScene" uid="uid://dps8qelmo2emh" path="res://scenes/components/health_component.tscn" id="2_r8x88"]
[ext_resource type="PackedScene" uid="uid://bq57dm3qfl6g3" path="res://scenes/extra/health_bar.tscn" id="4_eb5uv"]

[node name="BaseEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_jf5t1")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.392157)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_23iyx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.25, 0.25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="HealthComponent" parent="." instance=ExtResource("2_r8x88")]

[node name="HitArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="HealthBar" parent="." instance=ExtResource("4_eb5uv")]
offset_left = -75.0
offset_top = -271.0
offset_right = -75.0
offset_bottom = -271.0

[connection signal="on_damaged" from="HealthComponent" to="." method="_on_health_component_on_damaged"]
[connection signal="on_defeated" from="HealthComponent" to="." method="_on_health_component_on_defeated"]
[connection signal="body_entered" from="HitArea2D" to="." method="_on_hit_area_2d_body_entered"]
